--- a/css/custom.css
+++ b/css/custom.css
@@ -94,7 +94,7 @@ header {
 .header-top {
     float: left;
     width: 100%;
-    padding: 10px 0;
+    padding: 0;
 }	
 .header-top .navbar-brand {
     float: left;
