--- a/css/custom.css
+++ b/css/custom.css
@@ -1349,6 +1349,7 @@ nav.main-menu .navbar-toggle {border: solid #fff 2px;}
 .cert img{
   width:110px;
   height:80px;
+  margin:5px;
 }
 
 .cert img:hover{
