Contact Us fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -782,6 +782,7 @@ body.clinic_version .footer .widget-title h3 {
     font-weight: 400;
 }
 .footer-info {
+	z-index:1;
     float: left;
     width: 100%;
     margin: 0;
