--- a/css/custom.css
+++ b/css/custom.css
@@ -1359,7 +1359,13 @@ nav.main-menu .navbar-toggle {border: solid #fff 2px;}
   box-shadow: 2px 2px 3px;
 }
 
+#categories .service-widget{
+	box-shadow: 2px 2px 3px;
+}
 
+#categories .service-widget:hover{
+	box-shadow: 5px 5px 8px #888888;
+}
 
 
 
