--- a/css/custom.css
+++ b/css/custom.css
@@ -1367,5 +1367,24 @@ nav.main-menu .navbar-toggle {border: solid #fff 2px;}
 	box-shadow: 5px 5px 8px #888888;
 }
 
+.not-avail{
+	width:100%;
+	height:100%;
+	display:none;
+	position:absolute;
+	z-index:1;
+	text-align:center;
+	padding-top:30%;
+	font-size:20px;
+	font-weight:bold;
+}
+#categories .service-widget:hover .not-avail {
+    display:block;
+    background-color:black;
+    top:0;
+    opacity:0.70;
+
+}
+
 
 
